--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\style.css">
     <title>Kingyoso</title>
 </head>
 <body>
-    
+<div id="topSpace">
+
+</div>
+    <div id="heading">
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\Kinglogo.PNG" alt="Kinglogo" height="150px" width="150px">
+        <h1><strong>Kingyoso</strong></h1>
+        <h2><strong><em>Official Website for the band Kingyoso</em></strong></h2>
+    </div>
+    <div>
+        <h3><strong>About Kingyoso</strong></h3>
+        <p><em></em></p>
+    </div>
+<div id="footer">
+    <footer>
+        For bookings: Phone: 804.927.7672 Email: kingyosomusic@gmail.com  Facebook Page: @kinyosorva
+    </footer>
+</div>
 </body>
 </html>
