Huge breakthrough, added more text n styling
getting around git bash oddness at 1:25pm

--- a/index.html
+++ b/index.html
@@ -1,29 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\style.css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Caveat&display=swap" rel="stylesheet">
+
     <title>Kingyoso</title>
 </head>
-<body>
-<div id="topSpace">
 
-</div>
+<body>
+
+    <div id="topSpace">
+
+    </div>
+
     <div id="heading">
-        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\Kinglogo.PNG" alt="Kinglogo" height="150px" width="150px">
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\Kinglogo.PNG" alt="Kinglogo" height="150px"
+            width="150px">
         <h1><strong>Kingyoso</strong></h1>
         <h2><strong><em>Official Website for the band Kingyoso</em></strong></h2>
     </div>
-    <div>
+
+    <div id="about">
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\bandPic.jpg" alt="bandPic" width="450px">
         <h3><strong>About Kingyoso</strong></h3>
-        <p><em></em></p>
+        <p><em>Kingyoso is a Neosoul/Funk/Blues band native to Richmond, Virginia.</em></p>
+        <p>Members:</p>
+        <ul>
+            <li>Lead Vocals/Guitar/Songwriter - Goldfish</li>
+            <li>Backing Vocals/Bass - Sammy P Stiles </li>
+            <li>Guitar - Corey Bertsch</li>
+            <li>Sax - Chet Frierson</li>
+            <li>Trombone - Alex Powers</li>
+            <li>Ukelele - Stu Kindle</li>
+        </ul>
+        <p>Influences: Esperanza Spalding, Sister Sparrow and The Dirty Birds, Hiatus Kaiyote, Kat Wright, Lakestreet
+            Dive and Etta James</p>
+        <p>Kingyoso has previously performed at venues such as: The Dark Room, Lickinghole Creek Craft Brewery, The
+            Camel</p>
     </div>
-<div id="footer">
-    <footer>
-        For bookings: Phone: 804.927.7672 Email: kingyosomusic@gmail.com  Facebook Page: @kinyosorva
-    </footer>
-</div>
+
+    <div id="contact">
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\goldiePic.jpg" alt="goldiePic" height="250px"
+            width="200px">
+        <h3><strong>Contact Kingyoso</strong></h3>
+        <form><u>Name:</u></form>
+                    </h3>
+                    <input type="name" placeholder="Your Name">
+                    <br>
+                    <h3>
+                        <form><u>Phone Number:</u></form>
+                    </h3>
+                    <input type="phoneNumber" placeholder="(555) 555-5555">
+                    <br>
+                    <h3>
+                        <form><u>Email:</u></form>
+                    </h3>
+                    <input type="email" placeholder="youremail@address.com">
+                    <br>
+                    <br>
+                    <input class="submit" type="submit">
+    </div>
+    <br>
+
+    <div id="footer">
+        <footer><strong>
+            For bookings: <br> Email: kingyosomusic@gmail.com <br> Phone: 804.927.7672 <br> Facebook Page: @kinyosorva
+        </strong>
+        </footer>
+    </div>
 </body>
+
 </html>
