adding a test to solve issue

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>Kingyoso has previously performed at venues such as: The Dark Room, Lickinghole Creek Craft Brewery, The
             Camel</p>
     </div>
-
+    <div><p><strong>Adding something temp for test</strong></p></div>
     <div id="contact">
         <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\goldiePic.jpg" alt="goldiePic" height="250px"
             width="200px">
