deleted extra files and moved images file

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </div>
 
     <div id="heading">
-        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\Kinglogo.PNG" alt="Kinglogo" height="150px"
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\Kinglogo.PNG" alt="Kinglogo" height="150px"
             width="150px">
         <h1><strong>Kingyoso</strong></h1>
         <h2><strong><em>Official Website for the band Kingyoso</em></strong></h2>
     </div>
 
     <div id="about">
-        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\bandPic.jpg" alt="bandPic" width="450px">
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\bandPic.jpg" alt="bandPic" width="450px">
         <h3><strong>About Kingyoso</strong></h3>
         <p><em>Kingyoso is a Neosoul/Funk/Blues band native to Richmond, Virginia.</em></p>
         <p>Members:</p>
@@ -44,7 +44,7 @@
     </div>
     <div><p><strong>Adding something temp for test</strong></p></div>
     <div id="contact">
-        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\images\goldiePic.jpg" alt="goldiePic" height="250px"
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\goldiePic.jpg" alt="goldiePic" height="250px"
             width="200px">
         <h3><strong>Contact Kingyoso</strong></h3>
         <form><u>Name:</u></form>
