removed chunk of logo pic path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="heading">
-        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\Kinglogo.PNG" alt="Kinglogo" height="150px"
+        <img src="Kinglogo.PNG" alt="Kinglogo" height="150px"
             width="150px">
         <h1><strong>Kingyoso</strong></h1>
         <h2><strong><em>Official Website for the band Kingyoso</em></strong></h2>
