one last attempt to camelcase img name

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
         <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\kinglogo.PNG=" alt="Kinglogo" height="150px"
             width="150px">
             
+                        <!--FULL LOGO PATH SECTION STARTS HERE-->
+
             <div id="fullLogo"> 
-                <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\fulllogo.jpg" alt="fulllogo">
+                <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\fulllogo.jpg" alt="fullLogo">
             </div>
+            
+            <!--FULL LOGO PATH SECTION ENDS HERE-->
+
         <h1><strong>Kingyoso</strong></h1>
         <h2><strong><em>Official Website for the band Kingyoso</em></strong></h2>
     </div>
