rechecked n pasted all other img file names

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="heading">
-        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\kinglogo.PNG=" alt="Kinglogo" height="150px"
+        <img src="C:\Users\Ashlie\OneDrive\Desktop\Kingyoso\Kingyoso\images\kinglogo.PNG" alt="Kinglogo" height="150px"
             width="150px">
             
                         <!--FULL LOGO PATH SECTION STARTS HERE-->
